@@ -12,6 +12,7 @@ yacybar_nextstart=Beim nächsten Start von Firefox müssen Sie den Demomodus ern
 
 yacybar_peertype=Peer-Typ: 
 yacybar_request_problem=Es gab ein Problem mit der Anfrage.
+yacybar_no_connection=Keine Verbindung zu YaCy
 
 # auch bei yacybaroverlays benutzt:
 yacybar_xmlhttp=Kann keine XMLHTTP Instanz erstellen.
