@@ -12,6 +12,7 @@ yacybar_nextstart=On next start of firefox you need to reenable the Demomode. Yo
 
 yacybar_peertype=PeerType:
 yacybar_request_problem=There was a problem with the request.
+yacybar_no_connection=No connection to yacy
 
 # even used at yacybaroverlays:
 yacybar_xmlhttp=Cannot create a XMLHTTP instance.
