@@ -4,7 +4,8 @@
 + added localized description (daburna)
 x fixed problem with wrong demopeerlist saved in about:config (flori)
 x fixed "bgLoadURL not found" (flori)
-x fiexd problem with yacybar_crawljobs.rdf (flori)
+x fixed problem with yacybar_crawljobs.rdf (flori)
+x fixed not connected statusbar (flori)
 
 v 0.2.4 - 05.02.2008
 =====================================================================
